--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       type="image/x-icon"
       href="/Images/assets/banner/third_logo.png"
     />
-    <link rel="stylesheet" href="/Script/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
