--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       type="image/x-icon"
       href="/Images/assets/banner/third_logo.png"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -1864,6 +1864,6 @@
       <div class="overlay"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="/Script/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
