--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <!-- <a href="/"><span class="circle"></span>Eco - Shopzone</a> -->
                   <a href="/"
                     ><img
-                      src="/Images/assets/banner/main_logo.png"
+                      src="main_logo.png"
                       class="object-cover"
                       style="width: 350px"
                       alt=""
@@ -196,7 +196,7 @@
                                   <div class="thumbnail object-cover">
                                     <a href="#">
                                       <img
-                                        src="/Images/assets/products/apparel4.jpg"
+                                        src="apparel4.jpg"
                                         alt=""
                                         srcset=""
                                       />
@@ -260,7 +260,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/images/assets/products/home2.jpg"
+                                    src="home2.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -282,7 +282,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home3.jpg"
+                                    src="home3.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -306,7 +306,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home4.jpg"
+                                    src="home4.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -326,7 +326,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home5.jpg"
+                                    src="home5.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -513,7 +513,7 @@
                   <div class="swiper-slide">
                     <div class="item">
                       <div class="image object-cover">
-                        <img src="/Images/assets/slider/slider0.jpg" alt="" />
+                        <img src="slider0.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>La mejor maquinaria</h4>
@@ -530,7 +530,7 @@
                   <div class="swiper-slide">
                     <div class="item">
                       <div class="image object-cover">
-                        <img src="/Images/assets/slider/slider1.jpg" alt="" />
+                        <img src="slider1.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>Lo ultimo en tecnología</h4>
@@ -547,7 +547,7 @@
                   <div class="swiper-slide">
                     <div class="item">
                       <div class="image object-cover">
-                        <img src="/Images/assets/slider/slider2.jpg" alt="" />
+                        <img src="slider2.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>Oferta Rápida</h4>
@@ -564,7 +564,7 @@
                   <div class="swiper-slide">
                     <div class="item">
                       <div class="image object-cover">
-                        <img src="/Images/assets/slider/slider3.jpg" alt="" />
+                        <img src="slider3.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>Mejores ofertas</h4>
@@ -588,37 +588,37 @@
             <div class="wrapper flexitem">
               <div class="item">
                 <a href="#">
-                  <img src="/Images/assets/brands/zara.png" alt="" />
+                  <img src="zara.png" alt="" />
                 </a>
               </div>
 
               <div class="item">
                 <a href="#">
-                  <img src="/Images/assets/brands/samsung.png" alt="" />
+                  <img src="samsung.png" alt="" />
                 </a>
               </div>
 
               <div class="item">
                 <a href="#">
-                  <img src="/Images/assets/brands/oppo.png" alt="" />
+                  <img src="oppo.png" alt="" />
                 </a>
               </div>
 
               <div class="item">
                 <a href="#">
-                  <img src="/Images/assets/brands/asus.png" alt="" />
+                  <img src="asus.png" alt="" />
                 </a>
               </div>
 
               <div class="item">
                 <a href="#">
-                  <img src="/Images/assets/brands/hurley.png" alt="" />
+                  <img src="hurley.png" alt="" />
                 </a>
               </div>
 
               <div class="item">
                 <a href="#">
-                  <img src="/Images/assets/brands/dng.png" alt="" />
+                  <img src="dng.png" alt="" />
                 </a>
               </div>
             </div>
@@ -648,9 +648,9 @@
                       </div>
                       <div class="media">
                         <div class="image">
-                          <a href="/HTML/page-offer.html">
+                          <a href="page-offer.html">
                             <img
-                              src="/Images/assets/products/apparel4.jpg"
+                              src="apparel4.jpg"
                               alt=""
                             />
                           </a>
@@ -711,7 +711,7 @@
                         <div class="thumbnail object-cover">
                           <a href="/HTML/page-single.html">
                             <img
-                              src="/Images/assets/products/apparel3.jpg"
+                              src="apparel3.jpg"
                               alt=""
                             />
                           </a>
@@ -761,7 +761,7 @@
                         <div class="thumbnail object-cover">
                           <a href="/HTML/page-single.html">
                             <img
-                              src="/Images/assets/products/apparel1.jpg"
+                              src="apparel1.jpg"
                               alt=""
                             />
                           </a>
@@ -812,7 +812,7 @@
                         <div class="thumbnail object-cover">
                           <a href="/HTMLpage-single.html">
                             <img
-                              src="/Images/assets/products/home1.jpg"
+                              src="home1.jpg"
                               alt=""
                             />
                           </a>
@@ -860,9 +860,9 @@
                     <div class="item">
                       <div class="media">
                         <div class="thumbnail object-cover">
-                          <a href="/HTML/page-single.html">
+                          <a href="page-single.html">
                             <img
-                              src="/Images/assets/products/electronic3.jpg"
+                              src="electronic3.jpg"
                               alt=""
                             />
                           </a>
@@ -886,7 +886,7 @@
                       </div>
                       <div class="content">
                         <h3 class="main-links">
-                          <a href="/HTML/page-single.html"
+                          <a href="page-single.html"
                             >Auriculares inalámbricos supraaurales, auriculares Bluetooth
                             with Microphone</a
                           >
@@ -915,7 +915,7 @@
                         <div class="thumbnail object-cover">
                           <a href="/HTML/page-single.html">
                             <img
-                              src="/Images/assets/products/shoe1.jpg"
+                              src="shoe1.jpg"
                               alt=""
                             />
                           </a>
@@ -939,7 +939,7 @@
                       </div>
                       <div class="content">
                         <h3 class="main-links">
-                          <a href="/HTML/page-single.html"
+                          <a href="page-single.html"
                             >Men Slip On Shoes Casual with Arch Support
                             Insoles</a
                           >
@@ -964,9 +964,9 @@
                     <div class="item">
                       <div class="media">
                         <div class="thumbnail object-cover">
-                          <a href="/HTML/page-single.html">
+                          <a href="page-single.html">
                             <img
-                              src="/Images/assets/products/apparel2.jpg"
+                              src="apparel2.jpg"
                               alt=""
                             />
                           </a>
@@ -1014,9 +1014,9 @@
                     <div class="item">
                       <div class="media">
                         <div class="thumbnail object-cover">
-                          <a href="/html/page-single.html">
+                          <a href="page-single.html">
                             <img
-                              src="/images/assets/products/home2.jpg"
+                              src="home2.jpg"
                               alt=""
                             />
                           </a>
@@ -1040,7 +1040,7 @@
                       </div>
                       <div class="content">
                         <h3 class="main-links">
-                          <a href="/html/page-single.html"
+                          <a href="page-single.html"
                             >Medidor de velocidad</a
                           >
                         </h3>
@@ -1063,9 +1063,9 @@
                     <div class="item">
                       <div class="media">
                         <div class="thumbnail object-cover">
-                          <a href="/html/page-single.html">
+                          <a href="page-single.html">
                             <img
-                              src="/images/assets/products/home3.jpg"
+                              src="home3.jpg"
                               alt=""
                             />
                           </a>
@@ -1133,9 +1133,9 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
+                        <a href="page-single.html">
                           <img
-                            src="/images/assets/products/apparel1.jpg"
+                            src="apparel1.jpg"
                             alt=""
                           />
                         </a>
@@ -1177,9 +1177,9 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
+                        <a href="page-single.html">
                           <img
-                            src="/images/assets/products/apparel2.jpg"
+                            src="apparel2.jpg"
                             alt=""
                           />
                         </a>
@@ -1229,9 +1229,9 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
+                        <a href="page-single.html">
                           <img
-                            src="/images/assets/products/apparel3.jpg"
+                            src="apparel3.jpg"
                             alt=""
                           />
                         </a>
@@ -1280,9 +1280,9 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
+                        <a href="page-single.html">
                           <img
-                            src="/images/assets/products/apparel4.jpg"
+                            src="apparel4.jpg"
                             alt=""
                           />
                         </a>
@@ -1331,8 +1331,8 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
-                          <img src="/images/assets/products/shoe1.jpg" alt="" />
+                        <a href="page-single.html">
+                          <img src="shoe1.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1380,7 +1380,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="/html/page-single.html">
-                          <img src="/images/assets/products/shoe2.jpg" alt="" />
+                          <img src="shoe2.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1427,8 +1427,8 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
-                          <img src="/images/assets/products/shoe3.jpg" alt="" />
+                        <a href="page-single.html">
+                          <img src="shoe3.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
