--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/Images/assets/banner/third_logo.png"
+      href="third_logo.png"
     />
     <link rel="stylesheet" href="style.css"/>
     <link
@@ -1475,8 +1475,8 @@
                   <div class="item">
                     <div class="media">
                       <div class="thumbnail object-cover">
-                        <a href="/html/page-single.html">
-                          <img src="/images/assets/products/shoe4.jpg" alt="" />
+                        <a href="page-single.html">
+                          <img src="shoe4.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1533,7 +1533,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/banner1.jpg" alt="" />
+                        <img src="banner1.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>¡Venta brutal!</h4>
@@ -1550,7 +1550,7 @@
                   <div class="row">
                     <div class="item get-gray">
                       <div class="image">
-                        <img src="/images/assets/banner/banner2.jpg" alt="" />
+                        <img src="banner2.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>¡Venta brutal!</h4>
@@ -1568,7 +1568,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat1.jpg" alt="" />
+                        <img src="procat1.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>LLAVES TUERCA</h4>
@@ -1591,7 +1591,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat2.jpg" alt="" />
+                        <img src="procat2.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>Medidor</h4>
@@ -1615,7 +1615,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat3.jpg" alt="" />
+                        <img src="procat3.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>Multímetro Automotriz</h4>
@@ -1737,9 +1737,9 @@
               <div class="flexcol">
                 <div class="logo">
                   <!-- <a href="#"><span class="circle"></span>Eco - Shopzone</a> -->
-                  <a href="/HTML/index.html"
+                  <a href="index.html"
                     ><img
-                      src="/images/assets/banner/second_logo.png"
+                      src="second_logo.png"
                       style="width: 400px"
                       alt=""
                   /></a>
@@ -1768,7 +1768,7 @@
             <p class="mini-text">
               Hecho por
               <img
-                src="/images/assets/banner/heart.png"
+                src="heart.png"
                 style="width: 16px"
                 alt=""
               />
@@ -1839,7 +1839,7 @@
       <div id="modal" class="modal">
         <div class="content flexcol">
           <div class="image object-cover">
-            <img src="/images/assets/products/apparel4.jpg" alt="" />
+            <img src="apparel4.jpg" alt="" />
           </div>
           <h2>Obtenga las últimas ofertas y cupones</h2>
           <p class="mobile-hide">
