--- a/checkout.html
+++ b/checkout.html
@@ -7,8 +7,8 @@
     <title>Certijac | Certijac</title>
     <link
       rel="shortcut icon"
-      type="image/x-icon"
-      href="/images/assets/banner/third_logo.png"
+      type="x-icon"
+      href="third_logo.png"
     />
     <link rel="stylesheet" href="/Script/style.css" />
     <link
@@ -113,9 +113,9 @@
               <div class="left flexitem">
                 <div class="logo">
                   <!-- <a href="/"><span class="circle"></span>Eco - Shopzone</a> -->
-                  <a href="/HTML/index.html"
+                  <a href="index.html"
                     ><img
-                      src="/images/assets/banner/main_logo.png"
+                      src="main_logo.png"
                       class="object-cover"
                       style="width: 350px"
                       alt=""
@@ -182,7 +182,7 @@
                                   <div class="thumbnail object-cover">
                                     <a href="#">
                                       <img
-                                        src="/images/assets/products/apparel4.jpg"
+                                        src="apparel4.jpg"
                                         alt=""
                                         srcset=""
                                       />
@@ -252,7 +252,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/images/assets/products/home2.jpg"
+                                    src="home2.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -274,7 +274,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home3.jpg"
+                                    src="home3.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -298,7 +298,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home4.jpg"
+                                    src="home4.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -318,7 +318,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home5.jpg"
+                                    src="home5.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -605,7 +605,7 @@
                     <ul class="products mini">
                       <li class="item">
                         <div class="thumbnail object-cover">
-                          <img src="/images/assets/products/home2.jpg" alt="" />
+                          <img src="home2.jpg" alt="" />
                         </div>
                         <div class="item-content">
                           <p>Medidor de velocidad</p>
@@ -617,7 +617,7 @@
                       </li>
                       <li class="item">
                         <div class="thumbnail object-cover">
-                          <img src="/images/assets/products/home3.jpg" alt="" />
+                          <img src="home3.jpg" alt="" />
                         </div>
                         <div class="item-content">
                           <p>Computadora industrial</p>
@@ -629,7 +629,7 @@
                       </li>
                       <li class="item">
                         <div class="thumbnail object-cover">
-                          <img src="/images/assets/products/home4.jpg" alt="" />
+                          <img src="home4.jpg" alt="" />
                         </div>
                         <div class="item-content">
                           <p>Medidor de electricidad</p>
@@ -641,7 +641,7 @@
                       </li>
                       <li class="item">
                         <div class="thumbnail object-cover">
-                          <img src="/images/assets/products/home5.jpg" alt="" />
+                          <img src="home5.jpg" alt="" />
                         </div>
                         <div class="item-content">
                           <p>Ruedas</p>
@@ -757,7 +757,7 @@
                   <!-- <a href="#"><span class="circle"></span>Eco - Shopzone</a> -->
                   <a href="#"
                     ><img
-                      src="/images/assets/banner/second_logo.png"
+                      src="second_logo.png"
                       style="width: 400px"
                       alt=""
                   /></a>
@@ -786,7 +786,7 @@
             <p class="mini-text">
               Hecho por
               <img
-                src="/images/assets/banner/heart.png"
+                src="heart.png"
                 style="width: 16px"
                 alt=""
               />
@@ -858,7 +858,7 @@
       <div id="modal" class="modal">
         <div class="content flexcol">
           <div class="image object-cover">
-            <img src="/images/assets/products/apparel4.jpg" alt="" />
+            <img src="apparel4.jpg" alt="" />
           </div>
           <h2>Get the latest deals and coupons</h2>
           <p class="mobile-hide">
