--- a/page-offer.html
+++ b/page-offer.html
@@ -7,8 +7,8 @@
     <title>Certijac| Certijac</title>
     <link
       rel="shortcut icon"
-      type="image/x-icon"
-      href="/images/assets/banner/third_logo.png"
+      type="x-icon"
+      href="third_logo.png"
     />
     <link rel="stylesheet" href="/Script/style.css" />
     <link
@@ -113,9 +113,9 @@
               <div class="left flexitem">
                 <div class="logo">
                   <!-- <a href="/"><span class="circle"></span>Eco - Shopzone</a> -->
-                  <a href="/HTML/index.html"
+                  <a href="index.html"
                     ><img
-                      src="/images/assets/banner/main_logo.png"
+                      src="main_logo.png"
                       class="object-cover"
                       style="width: 350px"
                       alt=""
@@ -182,7 +182,7 @@
                                   <div class="thumbnail object-cover">
                                     <a href="#">
                                       <img
-                                        src="/images/assets/products/apparel4.jpg"
+                                        src="apparel4.jpg"
                                         alt=""
                                         srcset=""
                                       />
@@ -252,7 +252,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/images/assets/products/home2.jpg"
+                                    src="home2.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -274,7 +274,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home3.jpg"
+                                    src="home3.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -298,7 +298,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home4.jpg"
+                                    src="home4.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -318,7 +318,7 @@
                               <div class="thumbnail object-cover">
                                 <a href="#"
                                   ><img
-                                    src="/Images/assets/products/home5.jpg"
+                                    src="home5.jpg"
                                     alt=""
                                 /></a>
                               </div>
@@ -521,27 +521,27 @@
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/apparel4.jpg"
+                                href="apparel4.jpg"
                                 ><img
-                                  src="/images/assets/products/apparel4.jpg"
+                                  src="apparel4.jpg"
                                   alt=""
                               /></a>
                             </div>
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/apparel5.jpg"
+                                href="apparel5.jpg"
                                 ><img
-                                  src="/images/assets/products/apparel5.jpg"
+                                  src="apparel5.jpg"
                                   alt=""
                               /></a>
                             </div>
                             <div class="image-show swiper-slide">
                               <a
                                 data-fslightbox
-                                href="/images/assets/products/apparel6.jpg"
+                                href="apparel6.jpg"
                                 ><img
-                                  src="/images/assets/products/apparel6.jpg"
+                                  src="apparel6.jpg"
                                   alt=""
                               /></a>
                             </div>
@@ -556,19 +556,19 @@
                           >
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/apparel4.jpg"
+                                src="apparel4.jpg"
                                 alt=""
                               />
                             </li>
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/apparel5.jpg"
+                                src="apparel5.jpg"
                                 alt=""
                               />
                             </li>
                             <li class="thumbnail-show swiper-slide">
                               <img
-                                src="/images/assets/products/apparel6.jpg"
+                                src="apparel6.jpg"
                                 alt=""
                               />
                             </li>
@@ -962,7 +962,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel1.jpg"
+                            src="apparel1.jpg"
                             alt=""
                           />
                         </a>
@@ -1027,7 +1027,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel2.jpg"
+                            src="apparel2.jpg"
                             alt=""
                           />
                         </a>
@@ -1094,7 +1094,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel3.jpg"
+                            src="apparel3.jpg"
                             alt=""
                           />
                         </a>
@@ -1159,7 +1159,7 @@
                       <div class="thumbnail object-cover">
                         <a href="">
                           <img
-                            src="/images/assets/products/apparel4.jpg"
+                            src="apparel4.jpg"
                             alt=""
                           />
                         </a>
@@ -1223,7 +1223,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe1.jpg" alt="" />
+                          <img src="shoe1.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1287,7 +1287,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe2.jpg" alt="" />
+                          <img src="shoe2.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1351,7 +1351,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe3.jpg" alt="" />
+                          <img src="shoe3.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1413,7 +1413,7 @@
                     <div class="media">
                       <div class="thumbnail object-cover">
                         <a href="">
-                          <img src="/images/assets/products/shoe4.jpg" alt="" />
+                          <img src="shoe4.jpg" alt="" />
                         </a>
                       </div>
                       <div class="hoverable">
@@ -1484,7 +1484,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/banner1.jpg" alt="" />
+                        <img src="banner1.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>¡Venta brutal!</h4>
@@ -1501,7 +1501,7 @@
                   <div class="row">
                     <div class="item get-gray">
                       <div class="image">
-                        <img src="/images/assets/banner/banner2.jpg" alt="" />
+                        <img src="banner2.jpg" alt="" />
                       </div>
                       <div class="text-content flexcol">
                         <h4>¡Venta brutal!</h4>
@@ -1519,7 +1519,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat1.jpg" alt="" />
+                        <img src="procat1.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>LLAVES TUERCA</h4>
@@ -1542,7 +1542,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat2.jpg" alt="" />
+                        <img src="procat2.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>Medidor</h4>
@@ -1566,7 +1566,7 @@
                   <div class="row">
                     <div class="item">
                       <div class="image">
-                        <img src="/images/assets/banner/procat3.jpg" alt="" />
+                        <img src="procat3.jpg" alt="" />
                       </div>
                       <div class="content mini-links">
                         <h4>Multímetro Automotriz</h4>
@@ -1690,7 +1690,7 @@
                   <!-- <a href="#"><span class="circle"></span>Eco - Shopzone</a> -->
                   <a href="#"
                     ><img
-                      src="/images/assets/banner/second_logo.png"
+                      src="second_logo.png"
                       style="width: 400px"
                       alt=""
                   /></a>
@@ -1719,7 +1719,7 @@
             <p class="mini-text">
               Hecho por
               <img
-                src="/images/assets/banner/heart.png"
+                src="heart.png"
                 style="width: 16px"
                 alt=""
               />
@@ -1790,7 +1790,7 @@
       <div id="modal" class="modal">
         <div class="content flexcol">
           <div class="image object-cover">
-            <img src="/images/assets/products/apparel4.jpg" alt="" />
+            <img src="apparel4.jpg" alt="" />
           </div>
           <h2>Get the latest deals and coupons</h2>
           <p class="mobile-hide">
